--- a/index.html
+++ b/index.html
@@ -126,18 +126,17 @@
             display: block;
         }
 
-        /* Estilos para la hoja de impresión - ULTRA COMPACTO */
-        /* Estilos para la hoja de impresión - AJUSTADO A A4 */
+  /* Estilos para la hoja de impresión - AJUSTADO A A4 */
 .print-page {
     width: 210mm;
     min-height: 297mm;
-    padding: 3mm; /* antes 5mm */
+    padding: 3mm;
     margin: 0 auto;
     background: white;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     font-family: Arial, sans-serif;
-    font-size: 12px;   /* antes 7px */
-    line-height: 1.4;  /* antes 1.1 */
+    font-size: 12px;
+    line-height: 1.4;
 }
 
 @page {
@@ -160,9 +159,10 @@ body * {
     width: 100%;
     height: 100%;
     margin: 0;
-    padding: 3mm; /* mismo ajuste que arriba */
+    padding: 3mm;
     box-shadow: none;
 }
+
         
         .print-header {
             text-align: center;
