--- a/index.html
+++ b/index.html
@@ -1571,7 +1571,7 @@
 </div>
 <div>
 <label class="block text-sm font-medium mb-2">
-       IMEI / SERIE
+       Serie / IMEI
       </label>
 <input class="w-full px-4 py-2 border rounded-lg" name="imei" type="text"/>
 </div>
