--- a/index.html
+++ b/index.html
@@ -2631,7 +2631,7 @@
                         <div class="print-row">
                             <div class="print-label">DNI:</div>
                             <div class="print-value">${reparacion.dni}</div>
-                            <div class="print-label">IMEI:</div>
+                            <div class="print-label">SERIE:</div>
                             <div class="print-value">${reparacion.imei}</div>
                         </div>
                         <div class="print-row">
@@ -2683,7 +2683,7 @@
                         <div class="print-row">
                             <div class="print-label">DNI:</div>
                             <div class="print-value">${reparacion.dni}</div>
-                            <div class="print-label">IMEI:</div>
+                            <div class="print-label">SERIE:</div>
                             <div class="print-value">${reparacion.imei}</div>
                         </div>
                         <div class="print-row">
@@ -2714,10 +2714,12 @@
                             <div class="print-value">$${(reparacion.costoEstimado - reparacion.anticipo).toLocaleString()}</div>
                         </div>
                     </div>
+
+
                     
                     <div class="print-footer">
-                        <strong>Mundo Electronico - Moreno 1878 - Tel 11 3820-8152</strong><br>
-                        Las reparaciones tienen una garantía de 90 días únicamente por la misma falla reparada.<br>
+                        <strong> Mundo Electronico - Moreno 1878 - Tel 11 3820-8152 </strong><br>
+                        Las reparaciones tienen una garantía de 60 días únicamente por la misma falla reparada.<br>
                         Los repuestos están garantizados solo por defectos de fábrica.<br>
                         La garantía no cubre daños ocasionados por golpes, roturas, líquidos o uso indebido.<br>
                         Los trabajos de software y configuraciones no tienen garantía.
