--- a/index.html
+++ b/index.html
@@ -2631,7 +2631,7 @@
                         <div class="print-row">
                             <div class="print-label">DNI:</div>
                             <div class="print-value">${reparacion.dni}</div>
-                            <div class="print-label">SERIE:</div>
+                            <div class="print-label">Serie:</div>
                             <div class="print-value">${reparacion.imei}</div>
                         </div>
                         <div class="print-row">
@@ -2640,6 +2640,9 @@
                             <div class="print-label">Problema:</div>
                             <div class="print-value">${reparacion.problema}</div>
                         </div>
+                            <div class="print-row">
+                            <div class="print-label">Tel:</div>
+                            <div class="print-value">${reparacion.observaciones}</div>
                     </div>
                     
                     <div class="print-section">
