Problema reportado index.html

--- a/index.html
+++ b/index.html
@@ -2637,11 +2637,13 @@
                         <div class="print-row">
                             <div class="print-label">Tel:</div>
                             <div class="print-value">${reparacion.telefono}</div>
-                            <div class="print-label">Problema:</div>
+                      
+                            </div>
+                            <div class="print-label">Problema Reportado:</div>
                             <div class="print-value">${reparacion.problema}</div>
                         </div>
                             <div class="print-row">
-                            <div class="print-label">Tel:</div>
+                            <div class="print-label">Observaciones:</div>
                             <div class="print-value">${reparacion.observaciones}</div>
                     </div>
                     
