--- a/index.html
+++ b/index.html
@@ -1798,7 +1798,7 @@
                     problema: 'Pantalla rota',
                     anticipo: 15000,
                     costoEstimado: 45000,
-                    accesorios: 'Funda, cargador'
+                    observaciones: 'Funda, cargador'
                 },
                 {
                     id: '1002',
@@ -2333,7 +2333,7 @@
                         <p><strong>Equipo:</strong> ${equipo.equipo}</p>
                         <p><strong>IMEI:</strong> ${equipo.imei}</p>
                         <p><strong>Problema:</strong> ${equipo.problema}</p>
-                        <p><strong>Accesorios:</strong> ${equipo.accesorios}</p>
+                        <p><strong>Observaciones:</strong> ${equipo.accesorios}</p>
                     </div>
                     <div>
                         <h4 class="font-semibold text-gray-700">Información de Reparación</h4>
