--- a/index.html
+++ b/index.html
@@ -2725,10 +2725,11 @@
                         </div>
                     </div>
 
-
+  <div class="print-separator"></div>
                     
                     <div class="print-footer">
                         <strong> Mundo Electronico - Moreno 1878 - Tel 11 3820-8152 </strong><br>
+                          <div class="print-separator"></div>
                         Las reparaciones tienen una garantía de 60 días únicamente por la misma falla reparada.<br>
                         Los repuestos están garantizados solo por defectos de fábrica.<br>
                         La garantía no cubre daños ocasionados por golpes, roturas, líquidos o uso indebido.<br>
