--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         .print-footer {
             margin-top: 8px;
             font-size:12px;
-            text-align: left;
+            text-align: center;
             border-top: 1px solid #000;
             padding-top: 4px;
             line-height: 1.2;
