--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         ..print-footer {
   margin-top: 8px;
   font-size: 8px;
-  text-align: center;   /* 👈 esto lo centra en la hoja */
+  text-align: center;   
   border-top: 1px solid #000;
   padding-top: 4px;
   line-height: 1.2;
@@ -2575,7 +2575,7 @@
   .print-label{ font-weight:700; width:68pt; flex-shrink:0; font-size:15pt; }
   .print-value{ flex:1; margin-right:8pt; font-size:15pt; }
   .print-separator{ height:10pt; margin:8pt 0; border-top:1px dashed #999; }
-  .print-footer{ margin-top:10pt; font-size:13pt; border-top:1px solid #000; padding-top:6pt; line-height:1.25; }
+  .print-footer{ margin-top:10pt; font-size:13pt; border-top:1px solid #000; padding-top:6pt; line-height:1.25;  text-align: center;  }
   @media print { .print-header, .print-section, .print-footer { page-break-inside: avoid; } html, body { height:auto; overflow:hidden; } body { zoom:0.98; } }
 </style>
                 
