--- a/index.html
+++ b/index.html
@@ -2727,7 +2727,7 @@
 
   <div class="print-separator"></div>
                     
-                    <div class="print-footer">
+                    <div class="print-footer" style="text-align: center;">
                         <strong> Mundo Electronico - Moreno 1878 - Tel 11 3820-8152 </strong><br>
                           <div class="print-separator"></div>
                         Las reparaciones tienen una garantía de 60 días únicamente por la misma falla reparada.<br>
