--- a/index.html
+++ b/index.html
@@ -2699,9 +2699,9 @@
                             <div class="print-label">Problema:</div>
                             <div class="print-value">${reparacion.problema}</div>
                         </div>
-                            <div class="print-row">
+                            <div class="print-row print-row--stack">
                             <div class="print-label">Observaciones:</div>
-                            <div class="print-value">${reparacion.observaciones}</div>
+                             <div class="print-value">${(reparacion.observaciones || '').trim() || '-'}</div>
                     </div>
                     
                     <div class="print-section">
