--- a/index.html
+++ b/index.html
@@ -2701,7 +2701,8 @@
                         </div>
                             <div class="print-row print-row--stack">
                             <div class="print-label">Observaciones:</div>
-                             <div class="print-value">${(reparacion.observaciones || '').trim() || '-'}</div>
+                            <div class="print-value">${(reparacion.observaciones || '-')}</div>
+
                     </div>
                     
                     <div class="print-section">
