--- a/index.html
+++ b/index.html
@@ -2492,6 +2492,7 @@
                 anticipo: parseInt(formData.get('anticipo')) || 0,
                 costoEstimado: 0,
                 accesorios: formData.get('accesorios') || ''
+                observaciones: (formData.get('observaciones') || '').trim(),
             };
             
             reparaciones.push(nuevaReparacion);
