--- a/index.html
+++ b/index.html
@@ -2491,6 +2491,7 @@
                 problema: formData.get('problema'),
                 anticipo: parseInt(formData.get('anticipo')) || 0,
                 costoEstimado: 0,
+                observaciones: (formData.get('observaciones') || '').trim()
                 accesorios: formData.get('accesorios') || ''
             };
             
