--- a/index.html
+++ b/index.html
@@ -2491,7 +2491,9 @@
                 problema: formData.get('problema'),
                 anticipo: parseInt(formData.get('anticipo')) || 0,
                 costoEstimado: 0,
-                accesorios: formData.get('accesorios') || ''
+                accesorios: formData.get('accesorios') || '',
+                observaciones: (formData.get('observaciones') || '').trim()
+
             };
             
             reparaciones.push(nuevaReparacion);
