--- a/index.html
+++ b/index.html
@@ -1520,21 +1520,19 @@
 </div>
 <!-- Modal Nueva Reparación -->
 <div class="modal" id="nueva-reparacion-modal">
-<div class="modal-content">
-<div class="flex justify-between items-center mb-6">
-<h2 class="text-2xl font-bold">
-      Nueva Reparación
-     </h2>
-<button class="text-gray-500 hover:text-gray-700" onclick="hideNuevaReparacion()">
-<i class="fas fa-times text-xl">
-</i>
-</button>
+  <div class="modal-content">
+    <div class="flex justify-between items-center mb-6">
+      <h2 class="text-2xl font-bold">Nueva Reparación</h2>
+      <button class="text-gray-500 hover:text-gray-700" onclick="hideNuevaReparacion()">
+        <i class="fas fa-times text-xl"></i>
+      </button>
+    </div>
+    <div id="nueva-messages"></div>
+    <form class="grid grid-cols-1 md:grid-cols-2 gap-4" id="formNuevaReparacion">
+      <!-- campos -->
+    </form>
+  </div>
 </div>
-<div id="nueva-messages">
-</div>
-<form class="grid grid-cols-1 md:grid-cols-2 gap-4" id="formNuevaReparacion">
-<div>
-<label class="block text-sm font-medium mb-2">
        Cliente *
       </label>
 <input class="w-full px-4 py-2 border rounded-lg" name="cliente" required="" type="text"/>
