--- a/index.html
+++ b/index.html
@@ -1511,13 +1511,6 @@
            Se recomienda hacer respaldos periódicos de los datos.
           </p>
 </div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
 <!-- Modal Nueva Reparación -->
 <div class="modal" id="nueva-reparacion-modal">
   <div class="modal-content">
@@ -1527,24 +1520,23 @@
         <i class="fas fa-times text-xl"></i>
       </button>
     </div>
+
     <div id="nueva-messages"></div>
+
     <form class="grid grid-cols-1 md:grid-cols-2 gap-4" id="formNuevaReparacion">
-      <!-- campos -->
-    </form>
-  </div>
-</div>
-       Cliente *
-      </label>
-<input class="w-full px-4 py-2 border rounded-lg" name="cliente" required="" type="text"/>
-</div>
-<div>
-<label class="block text-sm font-medium mb-2">
-       DNI
-      </label>
-<input class="w-full px-4 py-2 border rounded-lg" name="dni" type="text"/>
-</div>
-<div>
-<label class="block text-sm font-medium mb-2">
+
+      <!-- Cliente -->
+      <div>
+        <label class="block text-sm font-medium mb-2">Cliente *</label>
+        <input class="w-full px-4 py-2 border rounded-lg" name="cliente" required type="text"/>
+      </div>
+
+      <!-- DNI -->
+      <div>
+        <label class="block text-sm font-medium mb-2">DNI</label>
+        <input class="w-full px-4 py-2 border rounded-lg" name="dni" type="text"/>
+      </div>
+
        Teléfono *
       </label>
 <input class="w-full px-4 py-2 border rounded-lg" name="telefono" required="" type="text"/>
