recuperado index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 
 <!-- saved from url=(0053)file:///C:/Users/Osk/Downloads/megusta_adjusted.html# -->
@@ -1511,32 +1512,42 @@
            Se recomienda hacer respaldos periódicos de los datos.
           </p>
 </div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 <!-- Modal Nueva Reparación -->
 <div class="modal" id="nueva-reparacion-modal">
-  <div class="modal-content">
-    <div class="flex justify-between items-center mb-6">
-      <h2 class="text-2xl font-bold">Nueva Reparación</h2>
-      <button class="text-gray-500 hover:text-gray-700" onclick="hideNuevaReparacion()">
-        <i class="fas fa-times text-xl"></i>
-      </button>
-    </div>
-
-    <div id="nueva-messages"></div>
-
-    <form class="grid grid-cols-1 md:grid-cols-2 gap-4" id="formNuevaReparacion">
-
-      <!-- Cliente -->
-      <div>
-        <label class="block text-sm font-medium mb-2">Cliente *</label>
-        <input class="w-full px-4 py-2 border rounded-lg" name="cliente" required type="text"/>
-      </div>
-
-      <!-- DNI -->
-      <div>
-        <label class="block text-sm font-medium mb-2">DNI</label>
-        <input class="w-full px-4 py-2 border rounded-lg" name="dni" type="text"/>
-      </div>
-
+<div class="modal-content">
+<div class="flex justify-between items-center mb-6">
+<h2 class="text-2xl font-bold">
+      Nueva Reparación
+     </h2>
+<button class="text-gray-500 hover:text-gray-700" onclick="hideNuevaReparacion()">
+<i class="fas fa-times text-xl">
+</i>
+</button>
+</div>
+<div id="nueva-messages">
+</div>
+<form class="grid grid-cols-1 md:grid-cols-2 gap-4" id="formNuevaReparacion">
+<div>
+<label class="block text-sm font-medium mb-2">
+       Cliente *
+      </label>
+<input class="w-full px-4 py-2 border rounded-lg" name="cliente" required="" type="text"/>
+</div>
+<div>
+<label class="block text-sm font-medium mb-2">
+       DNI
+      </label>
+<input class="w-full px-4 py-2 border rounded-lg" name="dni" type="text"/>
+</div>
+<div>
+<label class="block text-sm font-medium mb-2">
        Teléfono *
       </label>
 <input class="w-full px-4 py-2 border rounded-lg" name="telefono" required="" type="text"/>
