funciona index.html

--- a/index.html
+++ b/index.html
@@ -1614,7 +1614,8 @@
 <label class="block text-sm font-medium mb-2">
        Observaciones
       </label>
-<textarea class="w-full px-4 py-2 border rounded-lg" id="rep-observaciones" name="observaciones" rows="2"></textarea>
+<textarea class="w-full px-4 py-2 border rounded-lg" name="accesorios" rows="2"></textarea>
+</div>
 <div class="md:col-span-2 flex gap-4 mt-6">
 <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700" type="submit">
 <i class="fas fa-save mr-2">
